--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
       TZ: Asia/Seoul
       LDAP_ORGANISATION: "${LDAP_ORGANISATION}"
       LDAP_DOMAIN: "${LDAP_DOMAIN}"
-      LDAP_BASE_DN: "${LDAP_BASE_DN}"
       LDAP_ADMIN_PASSWORD: "${LDAP_ADMIN_PASSWORD}"
     volumes:
       - ./slapd/config:/etc/ldap/slapd.d
       - ./slapd/database:/var/lib/ldap
+      - ./slapd/ldifs:/container/service/slapd/assets/custome
     ports:
       - 389:389
       - 636:636
